--- a/manajemen-stock-app/backend/.env
+++ b/manajemen-stock-app/backend/.env
@@ -1,7 +1,7 @@
 PORT=5000
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=manajemen_stock
-DB_USER=stock_user
-DB_PASSWORD=password123
+DB_NAME=store-db
+DB_USER=store_admin
+DB_PASSWORD=storepass123
 
