--- a/manajemen-stock-app/backend/.env
+++ b/manajemen-stock-app/backend/.env
@@ -1,7 +1,6 @@
 PORT=5000
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=store-db
-DB_USER=store_admin
-DB_PASSWORD=storepass123
-
+DB_HOST=mainline.proxy.rlwy.net
+DB_PORT=29841
+DB_NAME=railway
+DB_USER=postgres
+DB_PASSWORD=ArFvPqcpSAkpWgeRMvLjZrALJDusnhSe
